--- a/css/explore_contact_get-involved.css
+++ b/css/explore_contact_get-involved.css
@@ -24,9 +24,7 @@ p {
   margin-left: 10px;
   margin-right: 10px;
 }
-.image-two {
-  margin-right: 10px;
-}
+.image-two,
 .image-three {
   margin-right: 10px;
 }
@@ -209,5 +207,5 @@ textarea {
 }
 #pop-up-cta:checked + .popup-box {
   display: block;
-  box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5);
 }
