--- a/css/media.css
+++ b/css/media.css
@@ -34,6 +34,10 @@
 }
 
 @media only screen and (min-width: 500px) {
+  nav li {
+    text-align: center;
+  }
+
   .wrapper {
     max-width: 70%;
     margin: auto;
