--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,9 @@
 
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-main {
-  flex: 1;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 h1 {
