--- a/css/media.css
+++ b/css/media.css
@@ -267,6 +267,11 @@
 }
 
 @media only screen and (min-width: 1100px) {
+  .featured-exhibition-info {
+    max-width: 1000px;
+    margin: auto;
+  }
+
   .wrapper {
     gap: 20px;
     max-width: 1100px;
