--- a/css/media.css
+++ b/css/media.css
@@ -43,8 +43,9 @@
     margin: auto;
   }
 
-  .slider {
-    max-width: 400px;
+  .news-grid {
+    max-width: 65%;
+    margin: auto;
   }
 
   /* ---------- Contact ---------- */
@@ -104,12 +105,13 @@
     margin-top: 0;
   }
 
-  .news {
-    height: auto;
+  .news-grid,
+  .news-item {
+    margin-left: 10px;
   }
 
-  .slider {
-    width: 60%;
+  .news-item {
+    max-width: 300px;
   }
 
   /* ---------- Explore ---------- */
@@ -169,6 +171,24 @@
     max-width: 650px;
     margin: auto;
     gap: 20px;
+  }
+}
+
+@media only screen and (min-width: 694px) and (max-width: 1099px) {
+  .news-grid {
+    max-width: 100%;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 20px;
+    justify-content: start;
+  }
+
+  .news-grid h2 {
+    grid-column: -1/1;
+  }
+
+  .news-item {
+    max-width: 90%;
   }
 }
 
@@ -289,29 +309,10 @@
     max-width: 90%;
   }
 
-  .news {
-    flex-direction: column;
-  }
-
-  .news h3 {
-    margin-bottom: 10px;
-  }
-
-  .news-brief {
-    margin-bottom: 20px;
-  }
-  .carousel-links {
-    display: none;
-  }
-
-  .news-one,
-  .news-two,
-  .news-three {
-    max-height: 350px;
-  }
-
-  .slider {
-    width: auto;
+  .news-grid {
+    max-width: 100%;
+    margin-top: 0px;
+    margin-left: 20px;
   }
 
   .landing-grid {
@@ -320,14 +321,6 @@
     column-gap: 10px;
     max-width: 1000px;
     margin: auto;
-  }
-  aside {
-    grid-column: 2;
-    max-width: 300px;
-  }
-
-  aside h2 {
-    margin-top: 20px;
   }
 
   .newsletter {
