--- a/css/media.css
+++ b/css/media.css
@@ -286,6 +286,12 @@
   }
 }
 
+@media all and (device-width: 1080px) and (device-height: 810px) and (orientation: landscape) {
+  .logo {
+    max-width: 250px;
+  }
+}
+
 @media only screen and (min-width: 1100px) {
   .featured-exhibition-info {
     max-width: 1000px;
