--- a/css/media.css
+++ b/css/media.css
@@ -192,6 +192,24 @@
   }
 }
 
+@media only screen and (min-width: 800px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1.125rem;
+  }
+}
+
 @media only screen and (min-width: 800px) and (max-width: 999px) {
   .wrapper {
     max-width: 90%;
