--- a/css/media.css
+++ b/css/media.css
@@ -50,12 +50,12 @@
 }
 
 @media only screen and (min-width: 694px) {
-  h1,
+  /*   h1,
   h2,
   h3,
   h4 {
     margin-left: 20px;
-  }
+  } */
 
   footer {
     margin-top: 25px;
